--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ h1 {
     text-align: center;
 }
 form {
-    width: 45%;
+    width: 36%;
     margin: auto;
 }
 legend {
@@ -27,20 +27,33 @@ input {
     display: block;
     border: 1px solid red;
     border-radius: 5px;
-    margin-right: 2px;
-    padding: 5px 0px;
+    padding: 8px 0px;
+    text-indent: 5px;
+    margin-bottom: 14px; 
 }
-#fmieszkanie {
-    border-color: lime;
+select {
+    display: block;
+    width: 100px;
+    border-color: blue;
+    border-radius: 5px;
+    padding: 8px 0px;
+    width: 100%;
+    text-indent: 5px;
 }
 textarea {
     width: 100%;
     height: 64px;
+    text-indent: 5px;
 }
-#flekarz {
-    width: 100px;
-    border-color: blue;
-    border-radius: 5px;
+#fmieszkanie {
+    border-color: lime;
+}
+.right {
+    margin-left: auto;
+}
+.double {
+    display: flex;
+    width: 90%;
 }
 button {
     margin-top: 10px;
