--- a/style.css
+++ b/style.css
@@ -21,39 +21,43 @@ fieldset {
     border: 2px solid #4C70AF;
     border-radius: 5px;
     font-size: 14px;
-}
+} 
 input {
     width: 100%;
-    display: block;
     border: 1px solid red;
+    font-size: 12px;
     border-radius: 5px;
     padding: 8px 0px;
     text-indent: 5px;
     margin-bottom: 14px; 
 }
 select {
-    display: block;
     width: 100px;
     border-color: blue;
     border-radius: 5px;
     padding: 8px 0px;
     width: 100%;
     text-indent: 5px;
+    margin-bottom: 14px;
+    box-shadow: 0px 0px 4px#4C70AF;
 }
 textarea {
     width: 100%;
     height: 64px;
-    text-indent: 5px;
+    padding-top: 5px;
+    padding-left: 5px;
 }
 #fmieszkanie {
     border-color: lime;
 }
-.right {
-    margin-left: auto;
+.left {
+    float:left;
+    width: 48%;
+    margin-right: 4%;
 }
-.double {
-    display: flex;
-    width: 90%;
+.right {
+    float: left;
+    width: 48%;
 }
 button {
     margin-top: 10px;
